src/scss/main.scss
/* ... */
table.dataTable thead .sorting_desc_disabled {
  background-image: url("../../public/images/dt/sort_desc_disabled.png");
}
.table-header-meetings-org {
  min-width: 250px;
}
.table-header-organisations-expense {
  min-width: 220px;
}
.table.dc-data-table{
  margin-bottom: 0;
}
.dataTables_wrapper {
  th {
    color: $color_TI;
    text-align: left;
  }
  td {
    text-align: left;
  }
  .dataTables_info {
    width: 40%;
    display: inline-block;
    text-align: left;
    margin: 0;
    padding: 30px;
    float: left;
  }
  .dataTables_paginate {
    width: 40%;
    display: inline-block;
    float: right;
    text-align: right;
    padding: 30px;
    .paginate_button {
      background: #fff;
      color: #2c3e50 !important;
      border: none;
      border-radius: 2px;
      padding: 5px 10px;
      margin: 0 2px;
      cursor: pointer;
      text-decoration: none;
      &.current, &:hover, &:active, &:focus {
        background: $color_TI;
        color: #fff !important;
      }
      &.previous, &.next {

      }
    }
  }
  .dataTables_length {
    width: 20%;
    display: inline-block;
    padding: 30px 0;
  }
}
table.dataTable tbody tr.odd {
  background: #fafafa;
}
table.dataTable tbody tr.even {
  background: #f5f5f5;
}
table.dataTable tbody tr:hover {
  cursor: pointer;
  background: #eee;
}

/* POPOVER */

.popover {
  background-color: $color_TI_darker;
  border: none;
  border-radius: 2px;
}
.bs-popover-auto[x-placement^=bottom] .arrow::after, .bs-popover-bottom .arrow::after {
  border-bottom-color: $color_TI_darker;
}
.bs-popover-auto[x-placement^=top] .arrow::after, .bs-popover-top .arrow::after {
  border-top-color: $color_TI_darker;
}
.popover-body {
  color: #fff;
  font-family: 'Montserrat', sans-serif;
}

/* Mobile changes for tables */
.chart-table {
  table {
    @media only screen and (max-width: 768px) {
      word-wrap:break-word;
      table-layout: fixed;
    }
  }
  td, th {
    @media only screen and (max-width: 768px) {
      font-size: 12px;
      vertical-align: middle !important;
      padding-left: 5px;
    }
    @media only screen and (max-width: 340px) {
      font-size: 11px;
    }
  }
  .dataTables_info, .dataTables_paginate, .dataTables_length {
    @media only screen and (max-width: 768px) {
      font-size: 14px;
      padding: 10px;
      width: 100%;
      float: none;
      text-align: center;
    }
  }
  .dataTables_wrapper .dataTables_paginate .paginate_button {
    padding: 5px;
  }
}

/* Travel filter buttons */
.travel-filter-buttons {
  text-align: right;
  padding: 15px;
  button {
    border: none;
    color: #fff;
    background: #ccc;
    border-radius: 2px;
    padding: 5px 15px;
    font-size: 14px;
    font-weight: 400;
    cursor: pointer;
    transition: all .4s;
    &:hover {
      background: #bbb;
    }
    &.active {
      background: #2a7aae;
      &:hover {
        background: #1a6a9e;
      }
    }
  }
}

/* Toggle last row of charts button */
.toggle-btn-container {
  text-align: left;
  padding: 0px 10px;
  margin-bottom: 20px;
  button {
    border: none;
    color: #fff;
    background: #3694d1;
    text-transform: uppercase;
    border-radius: 2px;
    padding: 5px 15px;
    font-size: 20px;
    font-weight: 400;
    cursor: pointer;
    transition: all .4s;
    &:hover {
      background: #1a6a9e;
    }
    @media only screen and (max-width: 769px) {
      width: 100%;
    }
  }
}

/* Mobile tables */
.tabA {
  .chart-table {
    td, th {
      &:nth-child(1), &:nth-child(4), &:nth-child(5) {
        @media only screen and (max-width: 768px) {
          display: none;
        }
      }
    }
  }
}

/* DATEPICKER */
.datefilter-container {
  padding: 20px 0;
  @media only screen and (max-width: 769px) {
    font-size: 13px;
  }
  input {
    padding: 5px;
    max-width: 30%;
    @media only screen and (max-width: 950px) {
      max-width: 25%;
    }
  }
  button {
    border: none;
    border-radius: 2px;
    color: #fff;
    padding: 6px 25px;
    cursor: pointer;
    background: #3694d1;
    transition: all 0.4s;
    &:hover {
      background: #1a6a9e;
    }
  }
}

/* Hide charts ticks after the first */
.tick .grid-line {
  opacity: 1;
}
.axis > .tick ~ .tick .grid-line {
  opacity: 0;
}

.donate-btn {
  vertical-align: middle;
  display: inline-block;
  color: #fff;
  background: #e5007d;
  padding: 12px 15px;
  margin: 0 20px;
  text-decoration: none;
  &:hover {
    background: #d10072;
    color: #fff !important;
    text-decoration: none;
  }
}

